--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/eap6cjk.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
+    <script src="vue-mapbox-gl.min.js"></script>
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -15,51 +17,8 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <div id="map" style='width: 700px; height: 700px;'></div>
+    <script src="/map.js"></script>
     <!-- built files will be auto injected -->
-    <div id='map' style='width: 800px; height: 800px;'></div>
-    <script>
-      mapboxgl.accessToken = 'pk.eyJ1IjoienliZXJ3b2xmaSIsImEiOiJjbGs5cXpkZG0wem5nM3NydHhvdTFrMmJsIn0.FqnLAPPbIlRIaXNZakf-GQ';
-      var map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/mapbox/streets-v11'
-      });
-
-      map.on("load", function() {
-
-        // Add a vector source for admin-1 boundaries
-        map.addSource("admin-1", {
-          type: "vector",
-          url: "mapbox.boundaries",
-          promoteId: "mapbox_id"
-        });
-
-        // Define a filter for US worldview boundaries
-        let worldviewFilter = [
-          "any",
-          ["==", "all", ["get", "worldview"]],
-          ["in", "US", ["get", "worldview"]]
-        ];
-
-        // Add a style layer with the admin-1 source below map labels
-        map.addLayer(
-                {
-                  id: "admin-1-fill",
-                  type: "fill",
-                  source: "admin-1",
-                  "source-layer": "boundaries_admin_1",
-                  filter: worldviewFilter,
-                  paint: {
-                    "fill-color": "#CCCCCC",
-                    "fill-opacity": 0.5
-                  }
-                },
-                // This final argument indicates that we want to add the Boundaries layer
-                // before the `waterway-label` layer that is in the map from the Mapbox
-                // Light style. This ensures the admin polygons are rendered below any labels
-                "waterway-label"
-        );
-      });
-    </script>
-
   </body>
 </html>
